dist/v1.4/README.md
# Расписание УлГТУ — Android-приложение

Клиент для сайта <https://timetable.житков.рф/>: WebView с фильтром по парам,
виджетами «Следующая пара» / «Пары на сегодня», напоминаниями и офлайн-копией.

Сайт — это HTML, сгенерированный Microsoft Word 97, без единого класса или `id`.
Приложение умеет разбирать его таблицы, поэтому виджеты и фильтр работают
не «поверх страницы», а по настоящим данным расписания.

---

## Что просили и что сделано

| Запрос | Реализация |
|---|---|
| Android WebView приложение для сайта | `MainActivity` + WebView: JavaScript, DOM Storage, cookies, зум, загрузка файлов, deep links |
| Сохранение последнего открытого окна | URL, заголовок, позиция прокрутки и **история переходов** (`WebView.saveState`). Переживает поворот экрана, смену темы и убийство процесса |
| Автообновление страницы при открытии | При запуске страница запрашивается с `Cache-Control: no-cache`; плюс обновление при возврате в приложение спустя 5 минут; плюс опциональное обновление каждые 15 минут |
| Фильтр по парам | Нижний лист «Фильтр по парам»: ненужные пары скрываются в таблице. Дополнительно «скрывать дни без пар» и «скрывать прошедшие пары» (по времени звонков) |
| Фильтры только на страницах расписания | На экранах выбора группы и на главной фильтры не применяются: скрипты сами проверяют, что на странице есть таблица со строками «Пары» и «Время» |
| Подгруппы | У части занятий есть «1-я» и «2-я п/г». В фильтре включается «только моя подгруппа» и выбирается 1-я или 2-я — чужие занятия скрываются и не попадают в виджет |
| Поиск по парам в открытом окне | Кнопка поиска в панели: найденные пары подсвечиваются, весь остальной текст становится полупрозрачным. Есть счётчик совпадений и переходы между ними |
| Теги пар: обязательная / необязательная | Тег ставится **тапом по конкретной паре** (ячейке), а не по столбцу: необязательная пара может быть в любом месте. Помеченная идёт приглушённо с пунктиром и не попадает в виджет и напоминания |
| Заголовок окна | В панели — название группы с открытой страницы; для выбора группы «Выбор группы», для остального «Расписание» — вместо `<title>` сайта вроде «10» или «raspisan» |
| Виджет «Следующая пара» | Номер пары, предмет, вид занятия, аудитория, преподаватель, день, время и обратный отсчёт |
| «Ещё что-нибудь» | Виджет «Пары на сегодня», напоминания о паре, поиск группы по всем разделам, тёмная тема сайта, офлайн-копия, вписывание таблицы в экран и другое (см. ниже) |

## Дополнительные возможности

- **Поиск по парам** — прямо в открытом расписании, без перезагрузки страницы: запрос
  подсвечивает подходящие ячейки (предмет, преподаватель, аудитория), а всё остальное
  на странице становится полупрозрачным. Есть счётчик и переходы «предыдущее/следующее».
- **Теги пар** — тап по паре в расписании помечает её необязательной: ячейка идёт
  приглушённо с пунктирной рамкой, повторный тап снимает пометку. Помеченные пары
  не попадают в виджет и напоминания (переключатель в фильтре).
- **Подгруппы** — «показывать только мою подгруппу» + выбор 1-й или 2-й: занятия чужой
  подгруппы прячутся в таблице и не участвуют в «следующей паре».
- **Виджет «Пары на сегодня»** — список пар текущего дня с временем и аудиториями.
- **Напоминания о паре** — уведомление за 5/10/15/30 минут до начала, один раз на пару.
- **Поиск группы** — на сайте поиска нет: чтобы найти группу, нужно угадать раздел и курс.
  Приложение скачивает все разделы (ФИСТ/ГФ, МФ/РТФ/ЭФ/ИФМИ, ИАТУ/ИЭФ/ЗВФ, КЭИ, СФ,
  преподаватели), разбирает их в плоский список с курсом и даёт поиск и избранное.
- **Тёмная тема сайта** — сайт светлый и «word-овский», приложение перекрашивает его
  в тёмные тона; отдельно переключается тема самого приложения.
- **Офлайн-копия** — если сети нет, показывается сохранённая страница расписания.
- **Вписывание таблицы в экран** — широкая таблица (801 px) раскладывается по ширине телефона.
- **Размер текста** — 60…200 %.
- **Режим ПК**, «поделиться ссылкой», «скопировать ссылку», «открыть в браузере», переход на главную.
- **Встроенная строка «следующая пара»** прямо в приложении (можно отключить или скрыть).
- **Виджеты обновляются точно к началу и концу пары** — неточный `AlarmManager`-будильник
  без специальных разрешений, плюс `WorkManager` раз в 30 минут.

---

## Установка

Готовый APK (подписан отладочным ключом, ставится на любой аппарат):

```
app/build/outputs/apk/debug/app-debug.apk
```

```bash
adb install -r app/build/outputs/apk/debug/app-debug.apk
```

Либо скопируйте APK на телефон и откройте (понадобится разрешить установку
из неизвестных источников).

**Первый запуск.** Откройте расписание своей группы — оно автоматически станет
источником для виджетов и напоминаний. Затем добавьте виджет на рабочий стол:
долгое нажатие на свободном месте → «Виджеты» → «Расписание УлГТУ».

Требования: Android 7.0 (API 24) и новее.

---

## Сборка

Нужны JDK 17 и Android SDK с платформой 34:

```bash
export JAVA_HOME=/path/to/jdk17
export ANDROID_HOME=/path/to/android-sdk   # platforms;android-34, build-tools;34.0.0
./gradlew assembleDebug
```

Проект обычный: `local.properties` с `sdk.dir` подхватывается автоматически.

<details>
<summary>Сборка на ARM64-хосте (Linux/Android aarch64)</summary>

Из всего инструментария AGP нативно зависит только `aapt2`, а Google собирает его
для Linux лишь под x86_64. На ARM64 можно запустить его через qemu:

```bash
# 1. x86_64-окружение для aapt2
dpkg-deb -x libc6_*.deb libstdc++6_*.deb zlib1g_*.deb libexpat1_*.deb /opt/amd64-sysroot
ln -sfn usr/lib64 /opt/amd64-sysroot/lib64 && ln -sfn usr/lib /opt/amd64-sysroot/lib

# 2. обёртка (имя обязано заканчиваться на «aapt2»: AGP проверяет имя файла)
mkdir -p /opt/aapt2-bin
printf '#!/bin/sh\nexec /usr/bin/qemu-x86_64-static -L /opt/amd64-sysroot /opt/aapt2/aapt2 "$@"\n' \
  > /opt/aapt2-bin/aapt2
chmod +x /opt/aapt2-bin/aapt2

# 3. указать AGP (в ~/.gradle/gradle.properties, чтобы не менять проект)
echo 'android.aapt2FromMavenOverride=/opt/aapt2-bin/aapt2' >> ~/.gradle/gradle.properties
```

Остальные шаги (`d8`/`r8`, подпись, упаковка) — обычный JVM-код и работают на ARM64 как есть.

</details>

---

## Как это устроено

### Разбор расписания

Страница группы выглядит так:

```
Пары  | 1-я | 2-я | ... | 8-я
Время | 08:30–09:50 | 10:00–11:20 | ...
Пнд, 14.09.2026 | | пр.<br>Современные международные отношения<br>Чернов В А<br>6-618 |
```

- на странице **две таблицы** — текущая и следующая неделя (заголовки «Неделя: N-я (…–…)»),
  поэтому виджет корректно работает на границе недель;
- строка «Время» даёт времена звонков, по ним считаются «прошедшие пары» и обратный отсчёт;
- ячейка занятия раскладывается **по смыслу, а не по позиции**: на странице группы порядок
  «вид, предмет, преподаватель, аудитория», а на странице преподавателя —
  «группа, вид, предмет, аудитория». Позиционный разбор на этом ломается, а классификация
  по содержимому работает для обеих схем.

Аудитория определяется структурно (`3-308`, `2-СЗ`, `10-акт.зал`), а не поиском подстроки:
поиск слова «спорт» ловил предмет «Элективные курсы по физической культуре и **спорт**у»
и менял предмет с аудиторией местами.

Логика разбора проверена на живых страницах сайта — 34 проверки
(`ScheduleParser`, `ScheduleLogic`), включая обе схемы ячеек, подгруппы, пустые пары
и выбор «следующей пары» в разных ситуациях.

### Фильтр по парам

Сайт статический, поэтому фильтр — это JavaScript, который внедряется в страницу
(`web/InjectedScripts.kt`):

- колонка `N` таблицы соответствует `N`-й паре, колонка `0` — дню недели;
- ненужные колонки получают `display: none`, поэтому таблица честно перестраивается;
- «прошедшие пары» считаются по времени звонков из строки «Время»;
- если в таблице не осталось видимых дней — скрывается вся таблица;
- скрипт идемпотентен: пересчёт состояния без перезагрузки страницы.

Скрытые пары уважают и виджеты с напоминаниями: если вы не хотите видеть 1-ю пару,
она не попадёт в «следующую пару».

### Виджеты

Страница сама отдаёт свой HTML в приложение через JS-мост (`WebAppInterface`), когда
распознаёт в себе расписание. Это надёжнее повторного скачивания: в виджет попадает
ровно то, что на экране, включая данные из кэша WebView. Дополнительно `WorkManager`
раз в 30 минут обновляет «мою группу» по сети, чтобы виджет жил без запуска приложения.
Разобранное расписание хранится в `filesDir/schedule_cache.json`.

### Структура проекта

```
app/src/main/java/ru/ulstu/timetable/
├── Constants.kt                 адреса и имена
├── TimetableApp.kt              Application: канал уведомлений, расписание синхронизации
├── data/
│   ├── GroupCatalog.kt          каталог групп по всем разделам (для поиска)
│   ├── Prefs.kt                 настройки + «последнее открытое окно»
│   ├── ScheduleCache.kt         сериализация расписания в JSON
│   ├── ScheduleParser.kt        разбор HTML расписания
│   ├── ScheduleRepository.kt    сеть (HttpURLConnection) + кэш
│   └── UrlTools.kt              IDN (кириллический домен), определение типов страниц
├── model/Schedule.kt            модели и ScheduleLogic: «следующая пара», «идёт сейчас»
├── ui/
│   ├── MainActivity.kt          WebView, фильтр, меню, офлайн, автообновление
│   ├── FilterBottomSheet.kt     нижний лист «Фильтр по парам»
│   ├── GroupPickerActivity.kt   поиск группы с избранным
│   ├── SettingsActivity.kt      настройки
│   └── SettingsRows.kt          конструктор строк настроек
├── web/
│   ├── InjectedScripts.kt       фильтр, тёмная тема, опрос страницы
│   └── WebAppInterface.kt       JS-мост «страница → приложение»
├── widget/                      два виджета, отрисовка, будильники, синхронизация
└── work/                        SyncWorker и напоминания
```

---

## Разрешения

| Разрешение | Зачем |
|---|---|
| `INTERNET`, `ACCESS_NETWORK_STATE` | загрузка расписания и работа офлайн-режима |
| `POST_NOTIFICATIONS` | напоминания о паре (Android 13+ спрашивает при включении) |
| `RECEIVE_BOOT_COMPLETED` | восстановление периодической синхронизации после перезагрузки |
| `WAKE_LOCK`, `FOREGROUND_SERVICE` | добавляет `WorkManager` (фоновое обновление виджетов) |

Cleartext-трафик запрещён, доверяются только системные сертификаты.

---

## Ограничения

- Виджет показывает данные после того, как расписание хотя бы раз получено
  (открытие приложения или фоновая синхронизация).
- Для физкультуры и подобных занятий адрес может быть не аудиторией, а площадкой
  (`2-СЗ`, `10-акт.зал`) — приложение показывает строку как есть.
- Сайт отдаёт **HTTP 200** даже для несуществующих страниц (внутри — текст «расписание
  снова сломали»). Приложение отличает такие страницы по содержимому и не затирает
  ими хороший кэш.
- Раздел «МФ, РТФ, ЭФ, ИФМИ» на момент сборки отдавал заглушки вместо расписания —
  это состояние сайта, а не приложения.
- Если сайт поменяет разметку, разбор данных и поиск групп могут потребовать правок;
  сам WebView продолжит показывать страницу.
- Release-сборка не подписана: для публикации настройте свой keystore.

---

## Версии и архив

Репозиторий: **<https://github.com/DemonMixIO/ulstu-timetable>**
Релизы со всеми версиями: **<https://github.com/DemonMixIO/ulstu-timetable/releases>**

Каждая выпущенная версия сохраняется целиком — и сборка, и README на тот момент:

| Версия | Что внутри | Ключевое изменение |
|---|---|---|
| `dist/v1.0/` | `Timetable-1.0-debug.apk`, `README.md` | первая версия |
| `dist/v1.1/` | `Timetable-1.1-debug.apk`, `README.md` | починена прокрутка вверх |
| `dist/v1.2/` | `Timetable-1.2-debug.apk`, `README.md` | поиск по парам, теги пар, фильтр только в шите |
| `dist/v1.3/` | `Timetable-1.3-debug.apk`, `README.md` | фильтры только на расписании, подгруппы, теги по ячейкам, заголовок с группой |
| `dist/v1.3.1/` | `Timetable-1.3.1-debug.apk`, `README.md` | подгруппы внутри одной ячейки, аудитории с `_`, фикс разбора блоков |

Исходники версионируются git-тегами (`v1.0` … `v1.3.1`), сам APK в git не хранится —
он лежит в `dist/` и приложен к соответствующему релизу на GitHub.

```bash
git clone https://github.com/DemonMixIO/ulstu-timetable.git
cd ulstu-timetable
git log --oneline --decorate      # хронология версий
git show v1.1 --stat              # что менялось в конкретной версии
git checkout v1.1                 # состояние исходников на момент версии
```

---

## Изменения

### 1.4 (versionCode 6)

- **Исправлены переносы и сломанные виджеты.** Перерисовка ячейки с подгруппами
  склеивала строки через пустую строку, потому что в JS не была схлопнута та же
  особенность разметки, что и в Kotlin: сайт пишет `<BR>` и перенос строки после него.
  Каждая строка ячейки становилась отдельным блоком, в расписании появлялись лишние
  переносы после «пр.»/«лаб.», а виджет показывал вместо предмета «пр.». Теперь
  в JS переводы строк исходника схлопываются до обработки `<BR>`.
- **Пометки «необязательная» переходят на неделю той же чётности.** Расписание
  повторяется по чётным и нечётным неделям, поэтому пометка хранится не по дате,
  а как `p{чётность}|{день недели}|{пара}`: поставленная на 1-й неделе, она работает
  и на 3-й (1→3, 2→4) и переживает сдвиг окна расписания.
- **Пометки запоминаются.** Ключи хранятся независимо от того, какие недели сайт
  показывает сейчас: если временно доступна только одна неделя, пометки не теряются
  и применяются, когда нужная неделя появится снова.
- Тестовый макет DOM теперь повторяет разметку сайта (перенос после `<BR>`) — раньше
  он был «чище» реальности, и ошибка разбора блоков через него не воспроизводилась.

### 1.3.1 (versionCode 5)

- **Подгруппы внутри одной ячейки.** Сайт часто отдаёт занятия обеих подгрупп в одной
  ячейке: «лаб. Физика / 1-я п/г / Малютин А Н / 6-702» и ниже «лаб. Физика / 2-я п/г /
  Долгов Д А / 6-703». Раньше при выбранной подгруппе такая ячейка пряталась целиком
  вместе с нужной информацией. Теперь содержимое ячейки **переписывается**: остаётся
  только блок своей подгруппы, а чужие строки убираются. Ячейка, где есть только чужая
  подгруппа, становится пустой — и это правильнее, чем `display:none`: спрятанная ячейка
  сдвигала строку и ломала столбцы таблицы.
- **Виджет берёт данные из обновлённой ячейки.** После перерисовки страница заново
  отдаёт свой HTML приложению, поэтому «следующая пара», виджет и напоминания используют
  уже отфильтрованное занятие своей подгруппы. Фоновую синхронизацию, которая качает
  страницу как есть, фильтр подгрупп применяется при разборе.
- **Аудитории с подчёркиванием.** Сайт стал писать часть аудиторий как `3_4`, а не `3-4`;
  из-за этого аудитория приклеивалась к названию предмета («Безопасность
  жизнедеятельности 3_4»). Разделитель `_` теперь распознаётся наравне с дефисом.
- **Исправлена регрессия разбора блоков.** Сайт пишет `<BR>` и перенос строки после него,
  поэтому замена `<BR>` на перевод строки давала двойной перенос, а он считается
  разделителем блоков — каждая строка ячейки становилась отдельным блоком, и предмет
  с аудиторией терялись. Теперь переносы строк исходника схлопываются до обработки `<BR>`.

### 1.3 (versionCode 4)

- **Фильтры работают только на страницах расписания.** Раньше «скрывать дни без пар»
  прятал таблицу и на странице выбора группы: там нет строк-дней, счётчик видимых дней
  оставался нулевым, и таблица с направлениями скрывалась целиком. Теперь скрипты сначала
  проверяют, что на странице есть таблица со строками «Пары»/«Время», и только тогда
  что-то меняют; таблица прячется лишь если в ней были дни и все они скрыты.
- **Подгруппы.** В фильтре появился раздел «Подгруппа»: переключатель «показывать только
  мою подгруппу» и выбор 1-й или 2-й. Занятия с «N-я п/г» чужой подгруппы скрываются,
  занятия без подгруппы остаются; чужая подгруппа не попадает в виджет и напоминания.
- **Теги пар теперь по ячейкам, а не по столбцам.** Раньше «необязательная» помечала всю
  пару целиком; теперь пометка ставится тапом по конкретному занятию (день + пара) —
  необязательная пара может быть в любом месте. В фильтре видно, сколько помечено,
  и есть кнопка «Сбросить пометки».
- **Заголовок окна.** В панели показывается название группы с открытой страницы, а не
  `<title>` сайта («10», «raspisan»). Для экрана выбора группы — «Выбор группы»,
  для остальных страниц — «Расписание».

### 1.2 (versionCode 3)

- **Поиск по парам в уже открытом окне.** Кнопка поиска в панели открывает строку поиска;
  запрос подсвечивает подходящие ячейки, а всё остальное на странице становится
  полупрозрачным. Видно счётчик совпадений и переходы «предыдущее/следующее».
  Подсветка ставится заново после перезагрузки страницы.
- **Теги пар: обязательная / необязательная.** В фильтре есть отдельный ряд чипов
  «Необязательные пары»: отмеченные показываются приглушённо с пунктирной рамкой,
  а из виджета и напоминаний исключаются (переключатель «Не показывать необязательные
  в виджете и напоминаниях», по умолчанию включён).
- **Фильтр по парам убран с главного экрана.** Полоска чипов под панелью удалена —
  все настройки пар теперь в одном месте, в нижнем листе «Фильтр по парам»
  (там же «скрывать дни без пар», «скрывать прошедшие пары» и теги).

### 1.1 (versionCode 2)

- **Исправлена прокрутка вверх.** `SwipeRefreshLayout` спрашивает о возможности прокрутки
  вверх у своего прямого ребёнка, а им был `FrameLayout`-обёртка (нужна, чтобы накладывать
  экран ошибки поверх WebView). `FrameLayout` не скроллится, поэтому свайп вниз всегда
  воспринимался как жест обновления и страница перезагружалась вместо прокрутки.
  Теперь проверка делегируется WebView через `setOnChildScrollUpCallback`, и обновление
  срабатывает только когда страница действительно в самом верху.

### 1.0 (versionCode 1)

- Первая версия: WebView-клиент, сохранение последнего окна, автообновление, фильтр
  по парам, виджеты «Следующая пара» и «Пары на сегодня», напоминания, поиск группы,
  тёмная тема, офлайн-копия.

